# AI4MODEL

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
contracts/: AI4Token.sol
examples/: quickstart.py
src/ai4/: __init__.py  bridge.py  cli.py  core.py  token.py
tests/: test_smoke.py
